# inverse_chinese_text_normalization

./: CMakeLists.txt  Makefile  README.md  itn-test.cc  itn-utils-test.cc  itn-utils.cc  itn-utils.h  itn.cc  itn.h  some-test-cases-result
data/: aishell-data.txt  idiom-and-ci.txt  junyi-test-cases.txt  susie-test-cases.txt
