set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

add_library(kaldi-itn itn.cc itn-utils.cc)

target_link_libraries(kaldi-itn /home/junyiao/kaldi/tools/openfst-1.6.7/lib/libfst.so)
target_link_libraries(kaldi-itn /opt/intel/mkl/lib/intel64/libmkl_intel_lp64.so)
target_link_libraries(kaldi-itn /opt/intel/mkl/lib/intel64/libmkl_intel_thread.so)
target_link_libraries(kaldi-itn /opt/intel/mkl/lib/intel64/libmkl_core.so)
target_link_libraries(kaldi-itn /opt/intel/compilers_and_libraries/linux/lib/intel64/libiomp5.so)
target_link_libraries(kaldi-itn ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(kaldi-itn kaldi-base)
add_executable(itn-test itn-test.cc)
target_link_libraries(itn-test kaldi-itn)
add_executable(itn-utils-test itn-utils-test.cc)
target_link_libraries(itn-utils-test kaldi-itn)